Use Crossroad to make a 'core-plus-minecraft' subproject; deduplicate tons and tons of code into it